--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,58 +6,4 @@
   <% end %>
 </div>
 
-<section class="sct-color-1 slice">
-  <div class="container-fluid masonry-container">
-    <div class="row">
-      <div class="col-md-8 col-sm-offset-2">
-        <div class="masonry-wrapper-cols">
-          <div class="masonry-gutter"></div>
-          <% @post_images.each do |post_image| %>
-          <!--コントローラから渡されたpost_images変数内から1つずつ取り出して、post_image変数へ格納します。-->
-            <div class="masonry-block">
-              <div class="block block-image v1">
-                <div class="block-image">
-                  <div class="view view-first">
-                    <%= link_to post_image_path(post_image.id) do %>
-                     <%= attachment_image_tag post_image, :image %>
-                    <!--attachment_image_tagは、refile側が用意した<img>タグを作成するヘルパー。
-                      post_image変数のimage_idに保存された画像の<img>タグを生成します。-->
-                    <% end %>
-                  </div>
-                </div>
-                <div class="block-content">
-                  <%= attachment_image_tag post_image.user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-                  <!--post_imageは画像の保存先カラムにあるインスタンス名。今回はuserモデルなので@user-->
-                  <!--:profile_imageは画像の保存先のカラム名。実際のカラムはprofile_image_idだけど、refileの仕様で_idはつけない-->
-                  <!--:fillは画像の縦横サイズの指定-->
-                  <!--classはHTMLのclassタグを、Railsのタグ用に記述している？-->
-                  <!--fallback:は画像データがカラムにない時、変わりに表示する画像を指定する。app/assets/内の画像-->
-                  <h3 class="block-title">
-                    <%= link_to post_image_path(post_image.id) do %>
-                      <i class="fa fa-map-marker"></i>
-                      <%= post_image.shop_name %>
-                      <!--post_image変数のshop_nameカラムを表示する。post_imageモデルに定義されている。-->
-                    <% end %>
-                  </h3>
-                  <p><%= post_image.caption %></p>
-                  <!--post_image変数のcaptionカラムを表示する。post_imageモデルに定義されている。-->
-                  <ul class="inline-meta">
-                    <li>By
-                      <%= post_image.user.name %>
-                      <!--post_image変数のuser_idに関連付けられているuserモデルのnameカラムを表示する。post_imageモデルに定義されている。-->
-                    </li>
-                    <li>
-                      <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          <% end %>
-          <%= paginate @post_images %>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
+<%= render 'post_images/list', post_images: @post_images %>
